# kopia-desktop

./: .gitattributes  .gitignore  .prettierignore  BACKEND_REVIEW.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT.md  LICENSE  README.md  WINDOWS_SERVICE.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/actions/setup-ubuntu-deps/: action.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
docs/: API_REFERENCE.md  CI_IMPROVEMENTS.md  DOCS_INDEX.md  FEATURE_STATUS.md  IMPLEMENTATION.md  KOPIA_API_COMPLETE_REFERENCE.md  KOPIA_API_SPEC.md  README.md  RESEARCH.md  TESTING_SUMMARY.md
scripts/: bump-version.sh  download-kopia.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  TESTING.md  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: commands_tests.rs  error.rs  error_edge_cases_tests.rs  kopia_api_integration_tests.rs  kopia_commands_tests.rs  kopia_server.rs  kopia_server_tests.rs  kopia_websocket.rs  lib.rs  main.rs  server_manager.rs  types.rs  types_tests.rs  types_unit_tests.rs  windows_ipc.rs  windows_service.rs
src-tauri/src/commands/: kopia.rs  mod.rs  system.rs  websocket.rs  windows_service.rs
src-tauri/src/tests/: advanced_error_tests.rs  concurrency_tests.rs  error_edge_cases_tests.rs  integration_tests.rs  kopia_api_integration_tests.rs  kopia_commands_tests.rs  kopia_server_tests.rs  kopia_websocket_tests.rs  mod.rs  system_tests.rs  types_advanced_tests.rs  types_tests.rs  types_unit_tests.rs
src/__tests__/: setup.test.ts
src/components/: ErrorBoundary.tsx  WindowCloseHandler.tsx
src/components/kopia/: NewBackupDialog.tsx  RepositoryConnectForm.tsx  RepositoryCreateForm.tsx  RepositorySelector.tsx  WindowsServiceManager.tsx  index.ts
src/components/layout/: AppLayout.tsx  AppSidebar.tsx  ErrorBoundary.tsx  PageHeader.tsx  Sidebar.tsx  StatusIndicator.tsx  Titlebar.tsx  WindowCloseHandler.tsx
src/hooks/: index.ts  useAsyncOperation.ts  useCurrentRepo.ts  useKopiaServer.ts  useMounts.ts  usePolicies.ts  usePolling.ts  useProviderConfig.ts  useRepository.ts  useRepositoryStatus.ts  useServerStatus.ts  useSnapshots.ts  useTasks.ts  useToast.ts
src/i18n/: config.ts
src/lib/: notifications.ts
src/pages/: Dashboard.tsx  DirectoryHistory.tsx  Mounts.tsx  NotFound.tsx  Onboarding.tsx  Overview.tsx  Policies.tsx  PolicyEdit.tsx  Preferences.tsx  ProfileDetail.tsx  ProfileHistory.tsx  Profiles.tsx  Repositories.tsx  Repository.tsx  RepositoryPage.tsx  SettingsPage.tsx  Setup.tsx  SnapshotBrowse.tsx  SnapshotCreate.tsx  SnapshotHistory.tsx  SnapshotRestore.tsx  Snapshots.tsx  TaskDetail.tsx  Tasks.tsx  index.ts
src/stores/: fontSize.ts  index.ts  kopia.ts  language.ts  preferences.ts  profiles.ts  repository.ts  theme.ts
src/styles/: globals.css
tests/: README.md
tests/e2e/: README.md  example.spec.ts  fixtures.ts  global-setup.ts  navigation.spec.ts  preferences.spec.ts  profiles.spec.ts  repository.spec.ts
tests/integration/: formatting-integration.test.ts  preferences-workflow.test.ts  profiles-workflow.test.ts
tests/unit/: example.test.ts
(+100 files in other folders)
