[package]
name = "kopia-desktop"
version = "0.1.0"
description = "Modern Desktop Application for Kopia Backup"
authors = ["Kopia Desktop Contributors"]
edition = "2021"
repository = "https://github.com/JBibu/kopia-desktop"
homepage = "https://github.com/JBibu/kopia-desktop"
license = "MIT"

[lib]
name = "kopia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
hostname = "0.3"
urlencoding = "2"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
