[package]
name = "kopia-desktop"
version = "0.1.0"
description = "Modern Desktop Application for Kopia Backup"
authors = ["Kopia Desktop Contributors"]
edition = "2021"
repository = "https://github.com/JBibu/kopia-desktop"
homepage = "https://github.com/JBibu/kopia-desktop"
license = "MIT"

[lib]
name = "kopia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
http = "1.1"
hostname = "0.3"
urlencoding = "2"
base64 = "0.22"
thiserror = "1.0"
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.59", features = ["Win32_System_Pipes", "Win32_Security", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.13"

# Optimized release profile
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization at cost of compile time
strip = true        # Automatically strip symbols
panic = "abort"     # Smaller binaries
